# verinote

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
docs/: architecture.md  configuration.md  operations.md  vendored-assets.md
tests/: conftest.py  env_sandbox.py  test_acceptance.py  test_active_root.py  test_analytics.py  test_answer_qid_contract.py  test_answer_qid_order.py  test_ask.py  test_ask_verdict.py  test_badge_actor_css.py  test_badge_tier_css.py  test_banner_verdict_glyphs.py  test_base_template_assets.py  test_chunk.py  test_claude_cli_adapter.py  test_cli.py  test_cloud_adapters.py  test_config.py  test_corroboration.py  test_coverage.py  test_datalog.py  test_dead_rule_warn.py  test_duckdb_backend.py  test_duckdb_fact_terms.py  test_duckdb_fact_terms_concurrency.py  test_duckdb_terms.py  test_engine.py  test_engine_input.py  test_env_isolation.py  test_env_sandbox_helpers.py  test_fact_term_e2e.py  test_gitignore.py  test_inference_cache.py  test_ingest.py  test_job_resume.py  test_llm_schema.py  test_nav_active_state.py  test_no_review_rules.py  test_normalize.py  test_ollama_adapter.py  (+28 more)
tests/contract/: README.md  __init__.py  capture.py  conftest.py  run.sh  test_contract_meta.py  test_extraction_contract.py  test_query_intent_contract.py  test_sync_rc_contract.py
tests/fixtures/contract/: extraction_acme_two_dates.json  query_intent_acme_ceo.json  sync_all_chunks_failed.json
tests/fixtures/policy/: sample-policy.dl
verinote/: __init__.py  __main__.py  cli.py  config.py  policy_defaults.py
verinote/engine/: __init__.py  coverage.py  datalog.py  duckdb_backend.py  duckdb_terms.py  policy_vocabulary.py  terms.py  wirelog.py
verinote/llm/: __init__.py  anthropic_adapter.py  base.py  claude_cli_adapter.py  factory.py  ollama_adapter.py  openai_adapter.py  schema.py
verinote/pipeline/: __init__.py  acceptance.py  ask.py  chunk.py  corroboration.py  engine_input.py  extract.py  ingest.py  normalize.py  policy_state.py  query.py  query_candidate_eval.py  query_intent.py  query_planner.py  query_quality_policy.py  query_schema.py  question_outcome.py  repair.py  report_trace.py  trust.py  verify.py  workbench.py
verinote/prompts/: __init__.py  library.py
verinote/prompts/defaults/: ask-fallback.md  claude-json-wrapper.md  extraction-limit-hint.md  extraction.md  focused-role-extraction.md  ollama-extraction.md  query-intent.md  query-translation.md
verinote/store/: __init__.py  analytics.py  db.py  duckdb_fact_terms.py  fact_input.py  schema.sql  tiers.py
verinote/web/: __init__.py  app.py
verinote/web/static/: app.css
verinote/web/templates/: analytics.html  ask.html  base.html  dashboard.html  kb_select.html  policy_halted.html  prompts.html  provenance.html  questions.html  report.html  review.html  settings.html  sidecar_unreadable.html  sources.html  workbench.html
verinote/web/templates/partials/: fact_edit.html  fact_row.html
