[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "verinote"
version = "0.0.1"
description = "Honest knowledge base: an LLM extracts source-backed facts, DuckDB-backed Datalog verifies them. Local web app."
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Justin Kim" }]
keywords = ["knowledge-base", "datalog", "duckdb", "fact-extraction", "neurosymbolic", "verification"]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "duckdb>=1.0",
]

[project.optional-dependencies]
# LLM providers are optional so the app installs without any single vendor SDK
# (anti-lock-in: pick whichever you have a key for, or run Ollama locally).
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
analytics = []
wirelog = ["pyrewire>=1.0.1,<2.0"]
# Binary source ingestion (docx/pdf -> text). Optional so the core stays light.
ingest = ["python-docx>=1.1", "pypdf>=4.0"]
test = ["pytest>=7", "httpx2>=2.5", "python-docx>=1.1"]

[project.scripts]
verinote = "verinote.cli:main"

[project.urls]
Homepage = "https://github.com/semantic-reasoning/verinote"

[tool.setuptools]
packages = [
  "verinote",
  "verinote.llm",
  "verinote.engine",
  "verinote.store",
  "verinote.pipeline",
  "verinote.prompts",
  "verinote.web",
]

[tool.setuptools.package-data]
"verinote.store" = ["*.sql"]
"verinote.prompts" = ["defaults/*.md"]
"verinote.web" = ["templates/*.html", "templates/partials/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
